2014-08-26  Mark Rowe  <mrowe@apple.com>

        Build fix after r172951.

        * fileapi/Blob.h: Give the argument the name that the predicates expect.

2014-08-25  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Generate toFile() instead of manual functions.
        https://bugs.webkit.org/show_bug.cgi?id=136207

        Reviewed by Darin Adler.

        No new tests, no behavior changes.

        * fileapi/Blob.h: Define BLOB_TYPE_CASTS.
        * fileapi/File.h: Use BLOB_TYPE_CASTS to generate toFile().
        (WebCore::toFile): Deleted.

2014-08-25  Zalan Bujtas  <zalan@apple.com>

        Subpixel layout: remove roundedLayoutPoint/roundedLayoutSize functions.
        https://bugs.webkit.org/show_bug.cgi?id=136236

        Reviewed by Simon Fraser.

        These functions simply call LayoutPoint/LayoutSize c'tors. They don't round the input value at all.

        Non change in functionality.

        * dom/MouseRelatedEvent.cpp:
        (WebCore::MouseRelatedEvent::computePageLocation):
        (WebCore::MouseRelatedEvent::computeRelativePosition):
        * dom/Touch.cpp:
        (WebCore::Touch::Touch):
        * html/shadow/SliderThumbElement.cpp:
        (WebCore::SliderThumbElement::setPositionFromPoint):
        * page/DragController.cpp:
        (WebCore::elementUnderMouse):
        * page/EventHandler.cpp:
        (WebCore::selectionExtentRespectingEditingBoundary):
        * page/scrolling/ios/ScrollingTreeFrameScrollingNodeIOS.mm:
        (WebCore::ScrollingTreeFrameScrollingNodeIOS::updateChildNodesAfterScroll):
        * page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
        (WebCore::ScrollingTreeFrameScrollingNodeMac::setScrollLayerPosition):
        * platform/graphics/LayoutPoint.h:
        (WebCore::roundedLayoutPoint): Deleted.
        * platform/graphics/LayoutSize.h:
        (WebCore::roundedLayoutSize): Deleted.
        * rendering/EllipsisBox.cpp:
        (WebCore::EllipsisBox::nodeAtPoint):