@@ -1,3 +1,12 @@
+2014-08-26  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [EFL] Build break using clang
+        https://bugs.webkit.org/show_bug.cgi?id=136245
+
+        Reviewed by Gyuyoung Kim.
+
+        * css/ViewportStyleResolver.cpp: Includes NodeRenderStyle.h
+
 2014-08-26  Mark Rowe  <mrowe@apple.com>
 
         Build fix after r172951.
